<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS_App_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ustawienia_button">Ustawienia1</string>
    <string name="ogrzewanie_button">Ogrzewanie</string>
    <string name="sabotaz_button">Sabotaż</string>
    <string name="zalacz_ogrzewanie">Załącz strefę 1</string>
    <string name="wylacz_ogrzewanie">Wyłącz strefę 1</string>
    <string name="koniec">Zakończ</string>
    <string name="title_activity_ustawienia">ustawienia</string>

</resources>
