<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/ustawienia_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:onClick="ustawienia"
        android:text="@string/ustawienia_button" />

    <Button
        android:id="@+id/sabotaz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ogrzewanie_button"
        android:layout_below="@+id/ogrzewanie_button"
        android:layout_marginTop="14dp"
        android:onClick="sabotaz"
        android:text="@string/sabotaz_button" />

    <Button
        android:id="@+id/ogrzewanie_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ustawienia_button"
        android:layout_below="@+id/ustawienia_button"
        android:layout_marginTop="15dp"
        android:onClick="ogrzewanie"
        android:text="@string/ogrzewanie_button" />

</RelativeLayout>
